Fix - Colors do not have a sufficient contrast ratio

--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -7,6 +7,7 @@
 }
 
 .footer a {
+  color: #C597FC;
   &:hover, &:focus {
     color: lighten($primary, 14%);
     background: #1a222c;
