--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -18,7 +18,7 @@ $base-line-height:           1.5em;
 $text-color:       rgba(0, 0, 0, 0.87) !default;
 $background-color: #f5f5f5;
 $white:            #fff;
-$primary:          #42b983;
+$primary:          #0000FF;
 
 html, body {
   width: auto;
